tests/paczka1/fuzzy1/11861005.err
Error in line 5: BtwDe S73 43,7
Error in line 6: GjoP S94 93,0
Error in line 9: XLycTN S94 21,8
Error in line 32: XLycTN S548 85,0
